--- a/package.json
+++ b/package.json
@@ -9,18 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.13.4",
+    "@clerk/nextjs": "^6.12.12",
+    "@clerk/themes": "^2.2.26",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@stream-io/node-sdk": "^0.4.19",
+    "@stream-io/video-react-sdk": "^1.12.11",
+    "@tabler/icons-react": "^3.31.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.485.0",
+    "next": "14.2.26",
+    "next-themes": "^0.4.6",
     "react": "^18",
+    "react-datepicker": "^8.2.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "next": "14.2.26"
+    "sonner": "^2.0.2",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4.0.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.26"
+    "eslint-config-next": "14.2.26",
+    "postcss": "^8",
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5"
   }
 }
